added functionality for creating posts

--- a/app/src/main/res/layout/activity_daily_challenge_upload_post.xml
+++ b/app/src/main/res/layout/activity_daily_challenge_upload_post.xml
@@ -6,4 +6,96 @@
     android:layout_height="match_parent"
     tools:context=".DailyChallengeUploadPost">
 
+    <ImageView
+        android:id="@+id/makePostIV"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toTopOf="@+id/progressBarUploadPost"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/neutralUploadPostTV"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Pick an image of your art, input a title and write a short description"
+        app:layout_constraintBottom_toTopOf="@+id/makePostIV"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/chooseImgBT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Image"
+        app:layout_constraintBottom_toTopOf="@+id/goBackUploadPostBT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/goBackUploadPostBT"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />
+
+
+    <Button
+        android:id="@+id/goBackUploadPostBT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="go back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBarUploadPost"
+        app:layout_constraintVertical_bias="0.866" />
+
+    <Button
+        android:id="@+id/postBT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Post"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/goBackUploadPostBT"
+        app:layout_constraintEnd_toStartOf="@+id/goBackUploadPostBT"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />
+
+    <ProgressBar
+        android:id="@+id/progressBarUploadPost"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/descriptionEditText"
+        android:layout_width="350dp"
+        android:layout_height="150dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="Input description"
+        android:inputType="textCapSentences|textMultiLine"
+        app:layout_constraintBottom_toTopOf="@+id/goBackUploadPostBT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/makePostIV" />
+
+    <EditText
+        android:id="@+id/titlePostEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:ems="10"
+        android:hint="Input title"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/descriptionEditText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/makePostIV"
+        app:layout_constraintVertical_bias="0.945" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
