--- a/app/src/main/res/layout/activity_daily_challenge_upload_post.xml
+++ b/app/src/main/res/layout/activity_daily_challenge_upload_post.xml
@@ -26,6 +26,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <Button
         android:id="@+id/chooseImgBT"
         android:layout_width="wrap_content"
@@ -33,9 +34,9 @@
         android:text="Choose Image"
         app:layout_constraintBottom_toTopOf="@+id/goBackUploadPostBT"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/goBackUploadPostBT"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toEndOf="@+id/postBT"
         app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />
-
 
     <Button
         android:id="@+id/goBackUploadPostBT"
