--- a/app/src/main/res/layout/activity_challenge_navigation.xml
+++ b/app/src/main/res/layout/activity_challenge_navigation.xml
@@ -58,5 +58,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/lordran_challenge_navig" />
+    <Button
+        android:id="@+id/RandomChallengeUserGuideBT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="user guide"
+        app:layout_constraintBottom_toTopOf="@+id/goBackChallengeSelectionBT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/challenge3BT" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
