--- a/app/src/main/res/layout/fragment_daily_challenge_view_posts.xml
+++ b/app/src/main/res/layout/fragment_daily_challenge_view_posts.xml
@@ -5,10 +5,21 @@
     android:layout_height="match_parent"
     tools:context=".DailyChallengeViewPostsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipePostsRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/postsRV"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            />
+
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
 
 </FrameLayout>
