--- a/app/src/main/res/layout/activity_daily_challenge_post_details.xml
+++ b/app/src/main/res/layout/activity_daily_challenge_post_details.xml
@@ -6,4 +6,201 @@
     android:layout_height="match_parent"
     tools:context=".DailyChallengePostDetails">
 
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
+        android:layout_above="@+id/commentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:xlmns="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xlmns:cardBackgroundColor="@color/white"
+                xlmns:cardCornerRadius="3dp"
+                xlmns:cardElevation="3dp"
+                xlmns:cardUseCompatPadding="true"
+                xlmns:contentPadding="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:id="@+id/userProfileLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/pFpIVDetailedPost"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:scaleType="centerCrop"
+                            android:src="@mipmap/ic_launcher" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/userNamePostTVDetailedPost"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="userName"
+                                android:textColor="@color/black"
+                                android:textSize="20sp" />
+
+                            <TextView
+                                android:id="@+id/postTimeTVDetailedPost"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:color="@color/black"
+                                android:text="12:12"
+                                android:textSize="12dp" />
+
+                        </LinearLayout>
+
+                        <ImageButton
+                            android:id="@+id/moreBTDetailedPost"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@null"
+                            android:src="@drawable/ic_more_horiz" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/postTitleTVDetailedPost"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:autoLink="all"
+                        android:color="@color/black"
+                        android:text="Title"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/postDescriptionTVDetailedPost"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:autoLink="all"
+                        android:color="@color/black"
+                        android:text="Post description."
+                        android:textColor="@color/black" />
+
+                    <ImageView
+                        android:id="@+id/postImageDetailedPost"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:background="@color/white" />
+
+
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#F5F0F0" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/likesTVDetailedPost"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="0 likes" />
+
+
+                        <TextView
+                            android:id="@+id/commentNumTVDetailedPost"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="0 comments"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/likeBTDetailedPost"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@color/white"
+                            android:drawableLeft="@drawable/ic_like_off"
+                            android:drawablePadding="5dp"
+                            android:text="Like"
+                            xlmns:backgroundTint="#EF7070" />
+
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Comment section"
+                android:drawableLeft="@drawable/ic_send_comment"
+                android:drawablePadding="5dp"
+                android:padding="2dp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/recyclerViewComments"/>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
+    <RelativeLayout
+        android:id="@+id/commentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <EditText
+            android:id="@+id/commentEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_margin="1dp"
+            android:layout_toStartOf="@+id/addCommentBT"
+            android:layout_toLeftOf="@+id/addCommentBT"
+            android:inputType="textCapSentences|textMultiLine"
+            android:hint="Enter comment . . ."
+            />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="@null"
+            android:src="@drawable/ic_comment"
+            android:id="@+id/addCommentBT"
+            android:layout_alignParentRight="true" />
+
+
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
