moved activities related to user account settings to an appropriately named package

--- a/app/src/main/res/layout/activity_password__update.xml
+++ b/app/src/main/res/layout/activity_password__update.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Password_Update">
+    tools:context=".user_account_settings.Password_Update">
     <Button
         android:id="@+id/goBackPassChangeBT"
         android:layout_width="wrap_content"
