--- a/app/src/main/res/layout/activity_email__update.xml
+++ b/app/src/main/res/layout/activity_email__update.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Email_Update">
+    tools:context=".user_account_settings.Email_Update">
 
     <EditText
         android:id="@+id/emailUpdate"
