--- a/app/src/main/res/layout/activity_upload_profile_picture.xml
+++ b/app/src/main/res/layout/activity_upload_profile_picture.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UploadProfilePicture">
+    tools:context=".user_account_settings.UploadProfilePicture">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/ProfilePicSelectIV"
