--- a/app/src/main/res/layout/activity_challenge3_d_geometry.xml
+++ b/app/src/main/res/layout/activity_challenge3_d_geometry.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Challenge3DGeometry">
+    tools:context=".randomChallgenges.Challenge3DGeometry">
 
     <TextView
         android:id="@+id/ShapeListTV"
